# Horus

./: .gitignore  README.md  pyproject.toml
horus/: chat_util.py  colors.py  main.py  menu.py
thebes/: chat_utility.py  main.py
